--- a/index.html
+++ b/index.html
@@ -3,37 +3,64 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="mystyle.css">
-    <script>
-        function myFunction() {
-            
-             if (document.getElementById("2").getAttribute("class") =="city")
-              {
-                document.getElementById("2").className = "city1";
-              }
-              else
-              {
-                document.getElementById("2").className = "city";
-              }            
-        }
-    </script>
+
+
     
 <title>Page Title</title>
 </head>
 <body>
-  <h1>Capitals</h1>
 
-  <h2 id="1" class="city">London</h2>
-  <p>London is the capital of England.</p>
-  
-  <h2 id="2" class="city1">Paris</h2>
-  <p>Paris is the capital of France.</p>
-  
-  <h2 id="3">Tokyo</h2>
-  <p>Tokyo is the capital of Japan.</p>
-  
-  <h1 class="city">--Capitals--</h1>
+  <div style="max-width: 1100px; text-align: center;">
+   <div class="sidebar">
+  <h1>Picture</h1>
+  <img class="profile-img" src="/html-css-bootstrap-dojo85/images/profile.jpg">
 
-  <button type="button" onclick="myFunction()">Change colour</button>
+  <div>
+    <h2>Name</h2>
+    <p>NikoDojan</p>
+    <h2>E-Mail</h2>
+    <p>niko201n@edu.eashj.dk</p>
+  </div>
+  <div style="margin-top: 1rem;">
+    <h2>Contact me</h2>
+    <form method="post" class="contact-form">
+      <input class="text-input w-100" type="text" placeholder="Subject">
+      <br>
+      <textarea class="text-input w-100" placeholder="Message"></textarea>
+      <br>
+      <button class="text-input" type="submit">Submit</button>
+    </form>
+  </div>
+ </div>
+
+  <div class="main-section">
+    <h1>Work experience</h1>
+    <p>
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+    </p>
+    <h1>Educations</h1>
+    <p>
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+    </p>
+    <h1>Projects</h1>
+    <p>
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+    </p>
+    <h1>Interests</h1>
+    <p>
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+    </p>
+  </div>
+
+</div>
+
+
+
+
+
+
+
+
 
 </body>
 </html> 
