--- a/index.html
+++ b/index.html
@@ -113,14 +113,12 @@
   </div>
 
 </section>
-
   <div class="row px-5 text-row text-row">
     <div class="shdw p-3 w-100">
       <h5>Projects</h5>
       <ul class="px-4">
         <li>Z-Pool Carpooling App for Zealand Erhvervsakademi <span class="badge badge-success h5">New</span></li>
-        <li>E-Commerce solution for Fisketorvet Mall</li>
-        
+        <li>E-Commerce solution for Fisketorvet Mall</li>        
       </ul> 
     </div>
   </div>
@@ -130,6 +128,7 @@
       <h5>Interests</h5>
       <p>
         Lorem Ipsum
+        Lorem upsum
       </p>
     </div>
   </div>
